# OAA_Praktikum4

./: CMakeLists.txt  main.cpp
include/: Bicycle.h  Car.h  DiGraph.h  Edge.h  GraphVisualizer.h  Motorcycle.h  Navigator.h  Node.h  OpenCVGraphVisualizer.h  Priorityqueue.h  SimpleException.h  Vehicle.h  liste.h
src/: DiGraph.cpp  Edge.cpp  GraphVisualizer.cpp  Navigator.cpp  Node.cpp  OpenCVGraphVisualizer.cpp  Priorityqueue.cpp
test/: CMakeLists.txt  DiGraphTest.cpp  EdgeTest.cpp  Helper.h  NavigatorTest.cpp  NodeTest.cpp  giventest.cpp
